--- a/example/build.gradle
+++ b/example/build.gradle
@@ -23,8 +23,10 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     api project(':barcode-scanner')
+    api 'com.google.zxing:core:3.3.0'
     implementation 'com.google.android.gms:play-services-vision:15.0.2'
     implementation project(':camera')
 }
